--- a/templates/uikit.html
+++ b/templates/uikit.html
@@ -65,6 +65,13 @@ $endif$
 
             $if(title)$
             <div class="uk-grid" data-uk-grid-margin>
+<!-- START OF NEW CONTENT -->
+                $if(version)$
+                    <div class="uk-width-1-1">
+                        <img src="$title_logo$" width="128"></img>
+                    </div>
+                $endif$
+<!-- END OF NEW CONTENT -->
                 <div class="uk-width-1-1">
                     <h1 class="uk-heading-large">$title$</h1>
                     $if(date)$
